--- a/style.css
+++ b/style.css
@@ -145,7 +145,26 @@ i .icon1{
     .menu-list .menu-list-items {  
         padding: 0.5rem 0.3rem;  
     }  
+
+    .hero{
+        flex-direction: column-reverse;
+    }
 }  
+
+@media screen and (max-width:650px){
+    .hero{
+        justify-content: center;
+        flex-direction: column-reverse;
+    }
+
+    .hero .img1 img{
+        margin-right: 0px;
+        width: 200px;
+        height: 200px;
+        margin-top: 100px;
+    }
+
+}
    
 /* Main Hero Section Styles */ 
 .hero {  
